# CLU

./: CMakeLists.txt  LICENSE.txt  README.md  clu.sln
clu_generator/: CMakeLists.txt  clu_generator.cpp  clu_generator.vcxproj
clu_runtime/: CMakeLists.txt  clu.h  clu_runtime.cpp  clu_runtime.vcxproj
docs/: Computing_Language_Utility_Spec.doc  Computing_Language_Utility_User_Guide.doc
samples/: CMakeLists.txt
samples/ToneMapping/: CMakeLists.txt  Readme_ToneMapping.txt  ToneMapping.cl  ToneMapping.cpp  ToneMapping.sln  ToneMapping.vcxproj  ToneMapping.vcxproj.filters  chdrdata.h
samples/common/: samples_properties.props
samples/cpp/: CMakeLists.txt  CPPVectorAdd.cpp  CPPVectorAddKernel.cl  CPPVectorAddKernel.cl.h
samples/float_to_half/: CMakeLists.txt  float_to_half.cpp  float_to_half.sln  float_to_half.vcxproj  float_to_half.vcxproj.filters
samples/gl_particles/: CMakeLists.txt  ParticleFS.gl  ParticleVS.gl  Readme.txt  RenderGL.cpp  RenderGL.h  Simulate.cl  SimulateCL.cpp  SimulateCL.h  gl_particles.sln  gl_particles.vcxproj  gl_particles.vcxproj.filters  gl_particles_main.cpp
samples/lib/display/: Dx10Context.h  GLContext.h  SampleWindow.h
samples/lib/glew-1.7.0/src/: glew.c
samples/lib/math/: Camera.inl  mathlib.h  matrix4.inl  vector2.inl  vector3.inl  vector4.inl
samples/queries/: queries.cpp  queries.sln  queries.vcxproj  queries.vcxproj.filters
samples/wait_on_any_event/: wait_on_any_event.cpp  wait_on_any_event.sln  wait_on_any_event.vcxproj  wait_on_any_event.vcxproj.filters
simple/: CMakeLists.txt  simple.c  simple.cl  simple.vcxproj
